<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainHome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brand_purple">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/tvWelcomeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tvWelcomeSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/login_successful"
            android:textColor="@color/welcome_subtitle"
            android:textSize="18sp" />


        <Button
            android:id="@+id/btnContinue"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:backgroundTint="@color/white"
            android:text="@string/continue_button"
            android:textColor="@color/brand_purple"
            android:textStyle="bold" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>