<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/topBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageButton
                android:id="@+id/btnMenu"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@android:drawable/ic_menu_sort_by_size"
                android:contentDescription="@string/nav_menu" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_tasks"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="16dp"
                android:textColor="@color/black" />

        </LinearLayout>

        <HorizontalScrollView
            android:id="@+id/topCategories"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:scrollbars="none"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/topBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category_all"
                    android:textAllCaps="false"
                    android:layout_marginEnd="8dp"/>

                <Button
                    android:id="@+id/btnPersonal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category_personal"
                    android:textAllCaps="false"
                    android:layout_marginEnd="8dp"/>

                <Button
                    android:id="@+id/btnSchool"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category_school"
                    android:textAllCaps="false"
                    android:layout_marginEnd="8dp"/>

                <Button
                    android:id="@+id/btnWork"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category_work"
                    android:textAllCaps="false"
                    android:layout_marginEnd="8dp"/>

            </LinearLayout>

        </HorizontalScrollView>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragmentContainer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/topCategories"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageButton
            android:id="@+id/btnAdd"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="20dp"
            app:backgroundTint="@color/purple_500"
            android:src="@android:drawable/ic_input_add"
            android:contentDescription="@string/category_all"
            android:padding="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_menu" />

</androidx.drawerlayout.widget.DrawerLayout>